<resources>
    <string name="app_name">Parstagram</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="signup_now_button">Don\'t have an account? Sign up.</string>
    <string name="signup_button">Sign up</string>
    <string name="description_hint">enter a description</string>
    <string name="handle_hint">Handle</string>
    <string name="email_hint">Email address</string>
    <string name="phone_hint">Phone number (no spaces)</string>
</resources>
