<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_username"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/username_hint">
    </EditText>

    <EditText
        android:id="@+id/et_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/et_username"
        android:hint="@string/password_hint"
        android:inputType="textPassword">
    </EditText>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:text="@string/signup_button"/>

</RelativeLayout>